tests/e2e/check-config/wrong-config-type-extensions-in-assertions/snapshot.txt
[1] redocly.yaml:10:13 at #/rules/rule~1metadata-lifecycle/subject/type

`type` "WrongXMetaData" is not a valid value. See the supported values: https://redocly.com/docs/cli/rules/configurable-rules#subject-object.

 8 | rule/metadata-lifecycle:
 9 |   subject:
10 |     type: WrongXMetaData
   |           ^^^^^^^^^^^^^^
11 |     property: 'lifecycle'
12 |   assertions:

Error was generated by the configuration struct rule.



Deprecated plugin format detected: type-extension
❌ Your config has 1 error.


